--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
     <link rel="stylesheet" href="style.css" />    
     <title>My Personal Website</title>
 </head>
-<body>    
-    <h1>Hello World!</h1>
-    <script src="script.js"></script>
+<body>
+    <script src="script.js"></script>       
+    <header>
+        <a href="#" class="logo">Natalie Wanjiku</a>
+
+        <nav class="navbar">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Skills</a>
+            <a href="#">Contact</a>
+        </nav>
+    </header> 
+    
 </body>
 </html>
