styled the header section of my page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <script src="script.js"></script>       
     <header>
-        <a href="#" class="logo">Natalie Wanjiku</a>
+        <a href="#" class="logo">Natalie</a>
 
         <nav class="navbar">
             <a href="#">Home</a>
