created a div for the main section of my website

--- a/index.html
+++ b/index.html
@@ -17,7 +17,17 @@
             <a href="#">Skills</a>
             <a href="#">Contact</a>
         </nav>
-    </header> 
+    </header>
+
+    <div class="main-content">
+        <section id="home">
+            <h2>Home</h2>
+            <p>><span>Hi there!</span>I'm Natalie,an aspiring software engineer with a love for creating cool and 
+                innovative digital solutions.I'm currently sharpening my skills and gearing up to work on some 
+                exciting projects(stay tuned for those!).This is just the beginning and i'm excited to share my
+                journey as i learn and grow in the tech world.</p>
+        </section>
+    </div>
     
 </body>
 </html>
