added an about section

--- a/index.html
+++ b/index.html
@@ -22,10 +22,18 @@
     <div class="main-content">
         <section id="home">
             <h2>Home</h2>
-            <p>><span>Hi there!</span>I'm Natalie,an aspiring software engineer with a love for creating cool and 
+            <p><span style="font-weight: bold;">Hi there!</span>I'm Natalie,an aspiring software engineer with a love for creating cool and 
                 innovative digital solutions.I'm currently sharpening my skills and gearing up to work on some 
                 exciting projects(stay tuned for those!).This is just the beginning and i'm excited to share my
                 journey as i learn and grow in the tech world.</p>
+        </section>
+
+        <section id="about">
+            <h2>About</h2>
+            <p>I'm Natalie,a software engineering student engineering student at Moringa School,turning my curiosity
+                about websites and apps into a career.<br>With skills in HTML,CSS and JavaScript,I'm excited to
+                take on new challenges,learn more technologies and work on impactful projects.My goal is to grow 
+                into a full-stack developer. </p>
         </section>
     </div>
     
