added a skills section

--- a/index.html
+++ b/index.html
@@ -35,6 +35,19 @@
                 take on new challenges,learn more technologies and work on impactful projects.My goal is to grow 
                 into a full-stack developer. </p>
         </section>
+
+        <section id="skills">
+            <h2>Skills</h2>
+            <p>Here are the tools and technologies i've been learning and using in my software engineering
+               journey:
+                <ul>
+                  <li>HTML:Structuring websites with clean,semantic code.</li>
+                  <li>CSS:Crafting visually appealing and responsive designs.</li>
+                  <li>JavaScript:Building interactivity and functionality for dynamic web applications
+                      (and debugging)</li>
+               </ul> 
+            </p>
+        </section>
     </div>
     
 </body>
