wrapped everything in the body with a div

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>My Personal Website</title>
 </head>
 <body>
-    <script src="script.js"></script>       
+    <script src="script.js"></script>
+    <div class="main-content"></div>       
     <header>
         <a href="#" class="logo">Natalie</a>
 
@@ -19,7 +20,6 @@
         </nav>
     </header>
 
-    <div class="main-content">
         <section id="home">
             <h2>Home</h2>
             <p><span style="font-weight: bold;">Hi there!</span>I'm Natalie,an aspiring software engineer with a 
