changed header's styling

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
 
-        <section id="home">
+        <!--<section id="home">
             <h2>Home</h2>
             <p><span style="font-weight: bold;">Hi there!</span>I'm Natalie,an aspiring software engineer with a 
                 love for creating cool and innovative digital solutions.I'm currently sharpening my skills 
@@ -47,7 +47,7 @@
                       (and debugging)</li>
                </ul> 
             </p>
-        </section>
+        </section>-->
     </div>
     
 </body>
