added an image as my background

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <script src="script.js"></script>
+    <div class="half-background">
     <div class="main-content"></div>       
     <header>
         <a href="#" class="logo">Natalie</a>
@@ -48,6 +49,7 @@
                </ul> 
             </p>
         </section>-->
+    </div>
     </div>
     
 </body>
