--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <a href="#" class="logo">Natalie</a>
 
         <nav class="navbar">
-            <a href="#">Home</a>
+            <a href="#" onclick="showSection('home')">Home</a>
             <a href="#">About</a>
             <a href="#">Skills</a>
             <a href="#">Contact</a>
         </nav>
     </header>
 
-        <!--<section id="home">
+        <section id="home" class="hidden">
             <h2>Home</h2>
             <p><span style="font-weight: bold;">Hi there!</span>I'm Natalie,an aspiring software engineer with a 
                 love for creating cool and innovative digital solutions.I'm currently sharpening my skills 
@@ -48,7 +48,7 @@
                       (and debugging)</li>
                </ul> 
             </p>
-        </section>-->
+        </section>
     </div>
     </div>
     
